<resources>
    <string name="app_name">Booket List</string>

    <!-- Activity titles -->
    <string name="title_main">Booket List</string>
    <string name="title_finished">Finished books</string>
    <string name="title_add">Add book</string>
    <string name="title_rating">View by ratings</string>
    <string name="title_progress">View by progress</string>
    <string name="title_search">Search</string>
    <string name="title_settings">Settings and credits</string>

    <!-- Main screen menu -->
    <string name="action_view_progress">View by progress</string>
    <string name="action_view_rating">View by ratings</string>
    <string name="action_view_random">Random book</string>
    <string name="action_settings">Settings</string>

    <!-- Main screen -->
    <string name="main_tab_current">Current books</string>
    <string name="main_tab_finished">Finished books</string>

    <!-- Add book screen -->
    <string name="add_book_title">Title</string>
    <string name="add_book_author">Author</string>
    <string name="add_book_page_count">Page count</string>
    <string name="add_book_page_read">Pages read</string>
    <string name="add_book_publisher">Publisher</string>
    <string name="add_book_published">Publish year</string>
    <string name="add_book_isbn">ISBN</string>
    <string name="add_book_search_button">Search for book</string>
    <string name="add_book_manual_button">Or add book manually</string>
    <string name="add_book_manual_submit_button">Add book</string>
    <string name="add_book_manual_instructions">All fields except title, author, and page count are optional</string>

    <!-- Search screen -->
    <string name="search_loading_filler">Loading books…</string>
    <string name="search_no_results">No results could be found</string>
    <string name="search_no_results_title">Title: %1$s</string>
    <string name="search_no_results_author">Author: %1$s</string>

    <!-- Book detail screen -->
    <string name="detail_cover_placeholder">Book cover</string>
    <string name="detail_icon_placeholder">Book progress icon</string>
    <string name="detail_title_placeholder">Book title</string>
    <string name="detail_author_placeholder">Author name</string>
    <string name="detail_published_placeholder">Publisher name, 2000</string>
    <string name="detail_progress_placeholder">0 / 1000 (0%)</string>
    <string name="detail_days_placeholder">10 days remaining (2 pages per day)</string>
    <string name="detail_started_placeholder">Added 01/01/2000</string>
    <string name="detail_synopsis_placeholder">Description goes here</string>
    <string name="detail_isbn_placeholder">ISBN: 111111111111</string>
    <string name="detail_days">%1$d day%2$s remaining (%3$d pages per day)</string>
    <string name="detail_started">Added %1$s</string>
    <string name="detail_isbn">ISBN: %1$s</string>
    <string name="detail_no_synopsis">No description provided</string>
    <string name="detail_no_isbn">No ISBN provided</string>
    <string name="detail_update_pages_button">Update pages read</string>
    <string name="detail_update_pages_text">Pages read</string>
    <string name="detail_remove_button">Remove book</string>

    <!-- Ratings screen -->
    <string name="rating_tab_highest">Highest rated</string>
    <string name="rating_tab_lowest">Lowest rated</string>

    <!-- Settings screen -->
    <string name="settings_page_rate_title">Reading speed</string>
    <string name="settings_page_rate">Pages per day</string>
    <string name="settings_page_rate_button">Save reading speed</string>
    <string name="settings_page_rate_toast">Reading speed set to %1$s pages per day</string>
    <string name="settings_search_title">Search</string>
    <string name="settings_search_remember">Remember last search</string>
    <string name="settings_data_title">Clear data</string>
    <string name="settings_data_reading">Clear currently reading</string>
    <string name="settings_data_finished">Clear finished</string>
    <string name="settings_data_all">Clear everything</string>
    <string name="settings_data_clear_button">Clear data</string>
    <string name="settings_data_toast">Data has been cleared</string>
    <string name="settings_credits_title">Credits</string>
    <string name="settings_credits_icons">Icons designed by Freepik from Flaticon</string>
    <string name="settings_credits_icons_link">http://www.flaticon.com/authors/freepik</string>
    <string name="settings_credits_app_icon">App icon designed by Paomedia, available under Creative Commons (Attribution 3.0 Unported)</string>
    <string name="settings_credits_app_icon_link">https://creativecommons.org/licenses/by/3.0/</string>

    <!-- Dialog buttons -->
    <string name="dialog_ok">OK</string>
    <string name="dialog_cancel">Cancel</string>

    <!-- Dialog messages -->
    <string name="confirm_remove_book_title">Remove book</string>
    <string name="confirm_remove_book">Are you sure you want to remove this book?</string>
    <string name="action_view_random_none">There are no books in the reading list.</string>
    <string name="rating_not_found_title">Book not found</string>
    <string name="rating_not_found">The selected book could not be found.</string>
    <string name="add_book_no_entry_title">Nothing entered</string>
    <string name="add_book_no_entry">A title or author must be entered.</string>
    <string name="add_book_no_page_count_title">No page count found</string>
    <string name="add_book_no_page_count">Unfortunately no page count could be found. Please enter the length of the book.</string>
    <string name="add_book_manual_no_entry_title">Add book</string>
    <string name="add_book_manual_no_entry">Title, author, and page count cannot be left blank.</string>
    <string name="confirm_clear_data_title">Clear data</string>
    <string name="confirm_clear_data">Are you sure you want to clear the %1$s list?</string>
    <string name="search_no_book_title">No book data</string>
    <string name="search_no_book">No book data could be found.</string>
</resources>
