<?xml version="1.0" encoding="utf-8"?>

<ScrollView
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/activity_settings"
    tools:context="com.chesak.adam.readinglist.activity_settings.SettingsActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:paddingBottom="@dimen/activity_vertical_margin"
        android:paddingLeft="@dimen/activity_horizontal_margin"
        android:paddingRight="@dimen/activity_horizontal_margin"
        android:focusableInTouchMode="true"
        android:paddingTop="@dimen/activity_vertical_margin">

        <TextView
            android:text="@string/settings_page_rate_title"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/settings_page_rate_title"
            android:textAppearance="@android:style/TextAppearance.Material.Title"
            android:textAlignment="center" />

        <RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
            xmlns:tools="http://schemas.android.com/tools"
            android:layout_width="fill_parent"
            android:layout_height="0dp"
            android:layout_weight="1"
            android:layout_marginTop="5dp">

            <EditText
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:inputType="number"
                android:ems="10"
                android:maxLength="4"
                android:id="@+id/settings_page_rate"
                android:hint="@string/settings_page_rate" />

            <ImageView
                android:id="@+id/settings_page_rate_button"
                android:padding="5dp"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignTop="@+id/settings_page_rate"
                android:layout_alignBottom="@+id/settings_page_rate"
                android:layout_alignEnd="@+id/settings_page_rate"
                android:src="@drawable/ic_checked"
                android:contentDescription="@string/settings_page_rate_button" />

        </RelativeLayout>

        <TextView
            android:text="@string/settings_search_title"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/settings_search_title"
            android:layout_marginTop="10dp"
            android:textAppearance="@android:style/TextAppearance.Material.Title"
            android:textAlignment="center" />


        <Switch
            android:text="@string/settings_search_remember"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/settings_search_remember"
            android:textAlignment="viewStart"
            android:layout_marginTop="5dp" />

        <TextView
            android:text="@string/settings_data_title"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/settings_data_title"
            android:layout_marginTop="10dp"
            android:textAppearance="@android:style/TextAppearance.Material.Title"
            android:textAlignment="center" />

        <RadioGroup
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/settings_data_group"
            android:layout_marginTop="5dp">

            <RadioButton
                android:text="@string/settings_data_reading"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/settings_data_reading"
                android:checked="true"/>

            <RadioButton
                android:text="@string/settings_data_finished"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/settings_data_finished"
                android:layout_weight="1" />

            <RadioButton
                android:text="@string/settings_data_all"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/settings_data_all"
                android:layout_weight="1" />

            <Button
                android:text="@string/settings_data_clear_button"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:id="@+id/settings_data_clear_button" />

        </RadioGroup>

        <TextView
            android:text="@string/settings_credits_title"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/settings_credits_title"
            android:layout_marginTop="10dp"
            android:textAppearance="@android:style/TextAppearance.Material.Title"
            android:textAlignment="center" />

        <TextView
            android:text="@string/settings_credits_icons"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/settings_credits_icons"
            android:textAppearance="@android:style/TextAppearance.Material.Body1"
            android:layout_marginTop="5dp"
            android:textAlignment="center" />

        <TextView
            android:text="@string/settings_credits_icons_link"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/settings_credits_icons_link"
            android:textAppearance="@android:style/TextAppearance.Material.Body1"
            android:autoLink="web"
            android:textAlignment="center" />

        <TextView
            android:text="@string/settings_credits_app_icon"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/settings_credits_app_icon"
            android:textAppearance="@android:style/TextAppearance.Material.Body1"
            android:layout_marginTop="5dp"
            android:textAlignment="center" />

        <TextView
            android:text="@string/settings_credits_app_icon_link"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/settings_credits_app_icon_link"
            android:textAppearance="@android:style/TextAppearance.Material.Body1"
            android:autoLink="web"
            android:textAlignment="center" />
    </LinearLayout>
</ScrollView>



