<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/activity_book_add_manual"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context="com.chesak.adam.readinglist.activity_add_manual.AddManualActivity">

    <TextView
        android:text="@string/add_book_manual_instructions"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/add_book_manual_instructions"
        android:textAppearance="@android:style/TextAppearance.Material.Body1" />

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:paddingTop="24dp">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <EditText
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:inputType="text|textAutoCorrect|textAutoComplete"
                android:ems="10"
                android:id="@+id/add_book_manual_title"
                android:hint="@string/add_book_title"
                android:layout_marginTop="10dp" />

            <EditText
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:inputType="text|textPersonName"
                android:ems="10"
                android:id="@+id/add_book_manual_author"
                android:hint="@string/add_book_author" />

            <EditText
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:inputType="number"
                android:maxLength="6"
                android:datePickerMode="spinner"
                android:ems="10"
                android:id="@+id/add_book_manual_page_count"
                android:hint="@string/add_book_page_count" />

            <EditText
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:inputType="text|textAutoCorrect|textAutoComplete"
                android:ems="10"
                android:id="@+id/add_book_manual_publisher"
                android:hint="@string/add_book_publisher" />

            <EditText
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:inputType="numberSigned"
                android:maxLength="5"
                android:ems="10"
                android:id="@+id/add_book_manual_published"
                android:hint="@string/add_book_published" />

            <EditText
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:inputType="textNoSuggestions"
                android:ems="10"
                android:id="@+id/add_book_manual_isbn"
                android:hint="@string/add_book_isbn" />

            <Button
                android:text="@string/add_book_manual_submit_button"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:id="@+id/add_book_manual_button"
                android:layout_marginTop="10dp" />

        </LinearLayout>
    </ScrollView>

</RelativeLayout>
