<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/activity_book_add"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context="com.chesak.adam.readinglist.activity_add.AddActivity">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">


            <EditText
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:inputType="text|textAutoCorrect|textAutoComplete"
                android:ems="10"
                android:id="@+id/add_book_title"
                android:hint="@string/add_book_title" />

            <EditText
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:inputType="text|textPersonName"
                android:ems="10"
                android:id="@+id/add_book_author"
                android:hint="@string/add_book_author" />
            <Button
                android:text="@string/add_book_search_button"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:id="@+id/add_book_submit_button"
                android:layout_marginTop="10dp" />

            <Button
                android:text="@string/add_book_manual_button"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:id="@+id/add_book_manual_button"
                style="@style/Widget.AppCompat.Button.Borderless" />

        </LinearLayout>

</RelativeLayout>
