<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/activity_book_detail"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context="com.chesak.adam.readinglist.BookDetailActivity">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:gravity="center"
            android:orientation="vertical">

            <ImageView
                android:id="@+id/detail_cover"
                android:background="@drawable/ic_book_black_24dp"
                android:layout_width="192dp"
                android:layout_height="192dp" />

            <TextView
                android:text="@string/detail_title_placeholder"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:id="@+id/detail_title"
                android:textAppearance="@android:style/TextAppearance.Material.Headline"
                android:layout_alignParentTop="true"
                android:layout_centerHorizontal="true"
                android:layout_marginTop="10dp"
                android:textAlignment="center" />

            <TextView
                android:text="@string/detail_author_placeholder"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:id="@+id/detail_author"
                android:textAppearance="@android:style/TextAppearance.Medium"
                android:textAlignment="center"
                android:fontFamily="sans-serif" />

            <TextView
                android:text="@string/detail_published_placeholder"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:id="@+id/detail_publisher"
                android:textAppearance="@android:style/TextAppearance.Medium"
                android:textAlignment="center"
                android:fontFamily="sans-serif" />

            <TextView
                android:text="@string/detail_progress_placeholder"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:id="@+id/detail_progess"
                android:textAppearance="@android:style/TextAppearance.Material.Widget.TextView"
                android:textAlignment="center"
                android:layout_marginTop="10dp" />

            <TextView
                android:text="@string/detail_synopsis_placeholder"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:id="@+id/detail_synopsis"
                android:textAppearance="@android:style/TextAppearance.Material.Body1"
                android:layout_marginTop="10dp" />

            <RatingBar
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/detail_rating"
                android:numStars="5"
                android:stepSize="0.5"
                android:layout_marginTop="10dp"
                style="@style/Widget.AppCompat.RatingBar" />

            <TextView
                android:text="@string/detail_isbn_placeholder"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:id="@+id/detail_isbn"
                android:textAppearance="@android:style/TextAppearance.Material.Body1"
                android:textAlignment="center"
                android:layout_marginTop="10dp" />

            <LinearLayout
                android:orientation="horizontal"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_marginTop="10dp">

                <Button
                    android:text="@string/detail_update_button"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:id="@+id/detail_update" />

                <Button
                    android:text="@string/detail_remove_button"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:id="@+id/detail_remove"
                    android:layout_weight="1" />
            </LinearLayout>

        </LinearLayout>
    </ScrollView>

</RelativeLayout>
